[package]
name = "gRPC_speedrace"
version = "0.1.0"
edition = "2024"

[dependencies]
# Yellowstone gRPC client - Latest versions
yellowstone-grpc-client = "8.0.0"
yellowstone-grpc-proto = "8.0.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"

# gRPC framework (used by yellowstone-grpc-client)
tonic = { version = "0.12", features = ["tls"] }

# Additional stream utilities
futures = "0.3"

# Error handling
anyhow = "1.0"

# Reconnection logic
backoff = { version = "0.4", features = ["futures", "tokio"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Base58 encoding for Solana addresses
bs58 = "0.5"

# Environment variables
dotenv = "0.15"